offsetTop and ('close') method

--- a/lib/notice.styl
+++ b/lib/notice.styl
@@ -20,7 +20,8 @@
       opacity: 0.7;
 
 .notice-error
-  background: #F2DEDE;
+  background: rgb(242, 222, 222);
+  background: rgba(242, 222, 222, 0.9);
   color: #B94A48;
 
 .notice-success
